[package]
name = "file-syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
flexi_logger = "0.31"
log = "0.4"
tempfile = "3"
walkdir = "2"
zstd = "0.13"
rayon = "1"
sentry = "0.46"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
